--- a/index.html
+++ b/index.html
@@ -8,19 +8,7 @@
 </head>
 <body>
     <ul>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-        <li><button></button></li>
-
+        <li><a href="insertionSort.html"><button>Insertion Sort</button></a></li>
     </ul>
 </body>
 </html>
