--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>Algorithems</title>
 </head>
 <body>
+    <h1>Sorting Algo</h1>
     <ul>
         <li><a href="insertionSort.html"><button>Insertion Sort</button></a></li>
+    </ul>
+    <hr>
+    <h1>Data structurs</h1>
+    <ul>
+        <li><a href=""><button>LinkList</button></a></li>
     </ul>
 </body>
 </html>
