--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <hr>
     <h1>Data structurs</h1>
     <ul>
-        <li><a href=""><button>LinkList</button></a></li>
+        <li><a href="Stack.html"><button>Stack</button></a></li>
     </ul>
 </body>
 </html>
