--- a/Stack.html
+++ b/Stack.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <p>Here is a sample C++ code for a stack and its operations:</p>
+    <img src="Stack.jpg" style="width:700px;" alt="">
     <div class="code-block">
         #include &lt;iostream&gt;<br>
         using namespace std;<br>
