--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Sorting Algo</h1>
     <ul>
         <li><a href="insertionSort.html"><button>Insertion Sort</button></a></li>
+        <li><a href="HeapSort.html"><button>Heap Sort</button></a></li>
+
     </ul>
     <hr>
     <h1>Data structurs</h1>
