--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
     <ul>
         <li><a href="Stack.html"><button>Stack</button></a></li>
     </ul>
+    <hr>
+    <h1>Quiz</h1>
+    <ul>
+        <li><a href="AssmplyLine.html">Assmply line</a></li>
+    </ul>
 </body>
 </html>
