--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <hr>
     <h1>Quiz</h1>
     <ul>
-        <li><a href="AssmplyLine.html">Assmply line</a></li>
+        <li><a href="AssmplyLine.html"><button>Assmply line</button></a></li>
     </ul>
 </body>
 </html>
