--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <h1>Quiz</h1>
     <ul>
         <li><a href="AssmplyLine.html"><button>Assmply line</button></a></li>
+        <li><a href="ChaindMultiplication.html"><button>chain multiplication</button></a></li>
+
     </ul>
 </body>
 </html>
