--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <ul>
         <li><a href="AssmplyLine.html"><button>Assmply line</button></a></li>
         <li><a href="ChaindMultiplication.html"><button>chain multiplication</button></a></li>
+        <li><a href="Bluebarrey.html"><button>Blue barrey</button></a></li>
 
     </ul>
 </body>
