--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="AssmplyLine.html"><button>Assmply line</button></a></li>
         <li><a href="ChaindMultiplication.html"><button>chain multiplication</button></a></li>
         <li><a href="Bluebarrey.html"><button>Blue barrey</button></a></li>
+        <li><a href="frogmanyn.html"><button>frog Man (yes/No) </button></a></li>
 
     </ul>
 </body>
